--- a/app/src/main/res/layout/content_explain_moshaver.xml
+++ b/app/src/main/res/layout/content_explain_moshaver.xml
@@ -113,7 +113,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:padding="20dp"
-                android:id="@+id/alagestarmarkaz"
+                android:id="@+id/alagestarmoshaver"
                 android:layout_weight="4"/>
 
             <LinearLayout
@@ -125,7 +125,6 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="م مشاور در این قسمت است"
                     android:textColor="#f3f3fa"
                     android:layout_gravity="center"
                     android:id="@+id/name_moshaver_textview"
@@ -135,7 +134,6 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="کارشناس زبان"
                     android:layout_gravity="center"
                     android:layout_centerHorizontal="true"
                     android:layout_below="@+id/name_moshaver_textview"
@@ -146,7 +144,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:text="کد کارشناس 245"
                     android:textColor="#f3f3fa"
                     android:layout_below="@+id/taxassose_moshaver_textview"
                     android:layout_centerHorizontal="true"
