--- a/app/src/main/res/layout/item_alagemandiha.xml
+++ b/app/src/main/res/layout/item_alagemandiha.xml
@@ -21,14 +21,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center"
-                android:textSize="15dp"
+                android:textSize="13dp"
                 android:layout_weight="1"
                 android:layout_gravity="right"
                 android:id="@+id/typeAlagemandiTextView"
                 android:text="مشاور"/>
             <TextView
                 android:layout_width="match_parent"
-                android:textSize="15dp"
+                android:textSize="13dp"
                 android:layout_height="match_parent"
                 android:gravity="center"
                 android:layout_gravity="left"
@@ -39,8 +39,10 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:orientation="vertical"
+            android:layout_gravity="center"
+            android:gravity="center"
             android:layout_weight="1.8">
 
             <TextView
@@ -49,10 +51,10 @@
                 android:text="asasadfddggdf"
                 android:layout_margin="6dp"
                 android:padding="3dp"
+                android:gravity="center"
                 android:textColor="#e78f02"
-                android:textSize="17dp"
-                android:id="@+id/AdviserName"
-                android:gravity="right"/>
+                android:textSize="15dp"
+                android:id="@+id/AdviserName"/>
 
         </LinearLayout>
 
