--- a/app/src/main/res/layout/item_moshaverin.xml
+++ b/app/src/main/res/layout/item_moshaverin.xml
@@ -25,7 +25,7 @@
                 android:layout_margin="4dp"
                 android:padding="3dp"
                 android:textColor="#e78f02"
-                android:textSize="17dp"
+                android:textSize="15dp"
                 android:id="@+id/AdviserName"
                 android:gravity="right"/>
             <TextView
@@ -33,7 +33,7 @@
                 android:layout_height="match_parent"
                 android:layout_margin="4dp"
                 android:padding="3dp"
-                android:textSize="15dp"
+                android:textSize="13dp"
                 android:id="@+id/Tag"
                 android:gravity="right"/>
             <LinearLayout
@@ -45,8 +45,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:id="@+id/item_icon"
+                    android:layout_marginLeft="5dp"
                     android:src="@drawable/yahligade"
-                    android:layout_weight="8.5"/>
+                    android:layout_weight="7"/>
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -57,33 +58,34 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_gravity="right"
-                        android:textSize="15dp"
+                        android:textSize="13dp"
+                        android:layout_marginRight="5dp"
                         android:gravity="right|bottom"
-                        android:layout_margin="5dp"
-                        android:layout_weight="1"
+                        android:layout_weight="1.5"
                         android:id="@+id/commentinnazrioml"/>
-                    <ImageView
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:id="@+id/arkan"
-                        android:src="@drawable/furuhe"
-                        android:layout_weight="3"/>
+
                 </LinearLayout>
+                <ImageView
+                    android:layout_width="17dp"
+                    android:layout_height="17dp"
+                    android:layout_marginBottom="5dp"
+                    android:id="@+id/arkan"
+                    android:src="@drawable/furuhe"/>
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:textSize="15dp"
-                    android:layout_gravity="right"
-                    android:gravity="right"
+                    android:textSize="13dp"
+                    android:layout_gravity="right|center_horizontal"
+                    android:gravity="right|center_horizontal"
                     android:id="@+id/IDCommentCount"
-                    android:layout_weight="6"/>
+                    android:layout_weight="5"/>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:text="کد کارشناس: "
-                    android:textSize="15dp"
-                    android:layout_gravity="right"
-                    android:gravity="right"/>
+                    android:textSize="13dp"
+                    android:layout_gravity="right|center_horizontal"
+                    android:gravity="right|center_horizontal"/>
             </LinearLayout>
         </LinearLayout>
         <RelativeLayout
