--- a/app/src/main/res/layout/item_porseshha.xml
+++ b/app/src/main/res/layout/item_porseshha.xml
@@ -26,7 +26,7 @@
                 android:layout_margin="4dp"
                 android:padding="3dp"
                 android:textColor="#e78f02"
-                android:textSize="17dp"
+                android:textSize="15dp"
                 android:id="@+id/OnvanePorseshTextView"
                 android:gravity="right"/>
             <TextView
@@ -35,7 +35,7 @@
                 android:text="adlmsljnsldkmlsdknlsjkdnlskdnl"
                 android:layout_marginRight="20dp"
                 android:padding="3dp"
-                android:textSize="15dp"
+                android:textSize="13dp"
                 android:gravity="right"
                 android:id="@+id/MatnePorseshTextView"
                 />
@@ -55,7 +55,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="1321"
-                        android:textSize="15dp"
+                        android:textSize="13dp"
                         android:layout_margin="10dp"
                         android:padding="3dp"
                         android:layout_gravity="right|center"
@@ -65,7 +65,7 @@
                         android:layout_width="20dp"
                         android:layout_height="20dp"
                         android:layout_gravity="center"
-                        android:src="@drawable/arkan"/>
+                        android:src="@drawable/dislike"/>
                 </LinearLayout>
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -80,7 +80,7 @@
                         android:text="1321"
                         android:padding="3dp"
                         android:layout_weight="1"
-                        android:textSize="15dp"
+                        android:textSize="13dp"
                         android:layout_gravity="left|center"
                         android:id="@+id/QID"
                         android:gravity="right"/>
@@ -89,7 +89,7 @@
                         android:layout_marginRight="50dp"
                         android:layout_gravity="center"
                         android:layout_height="20dp"
-                        android:src="@drawable/soxum"/>
+                        android:src="@drawable/like"/>
                 </LinearLayout>
                 <LinearLayout
                     android:layout_width="match_parent"
