--- a/app/src/main/res/layout/content_explain_moshaver.xml
+++ b/app/src/main/res/layout/content_explain_moshaver.xml
@@ -1,214 +1,273 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout android:layout_width="match_parent"
+<RelativeLayout android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/explainpage"
     android:baselineAligned="false"
-    android:id="@+id/lay2"
     android:layoutDirection="ltr"
     android:orientation="vertical"
     xmlns:android="http://schemas.android.com/apk/res/android">
-
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="12"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layoutDirection="ltr"
+        android:id="@+id/lay2"
+        android:layout_height="match_parent">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:gravity="right"
-            android:padding="5dp"
-            android:orientation="horizontal"
-            android:layout_weight="10">
-            <ImageView
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_margin="10dp"
-                android:id="@+id/backButton"
-                android:layout_gravity="right"
-                android:src="@drawable/ic_chevron_left_white"/>
+            android:layout_weight="12"
+            android:orientation="vertical">
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="2">
-                <TextView
+                android:gravity="right"
+                android:padding="5dp"
+                android:orientation="horizontal"
+                android:layout_weight="10">
+                <ImageView
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_margin="10dp"
+                    android:id="@+id/backButton"
+                    android:layout_gravity="right"
+                    android:src="@drawable/ic_chevron_left_white"/>
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:text="مشاور"
-                    android:layout_gravity="center"
-                    android:textColor="#ffffff"
-                    android:textSize="17dp"/>
+                    android:layout_weight="2">
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:text="مشاور"
+                        android:layout_gravity="center"
+                        android:textColor="#ffffff"
+                        android:textSize="17dp"/>
+                </LinearLayout>
+                <ImageView
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_margin="10dp"
+                    android:id="@+id/menuButton"
+                    android:layout_gravity="right"
+                    android:src="@drawable/ic_menu_white"/>
             </LinearLayout>
-            <ImageView
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_margin="10dp"
-                android:id="@+id/menuButton"
-                android:layout_gravity="right"
-                android:src="@drawable/ic_menu_white"/>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="7">
+                <de.hdodenhof.circleimageview.CircleImageView
+                    xmlns:app="http://schemas.android.com/apk/res-auto"
+                    android:id="@+id/adviser_about_img"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    app:civ_border_width="2dp"
+                    android:layout_margin="30dp"
+                    android:src="@drawable/rezerv"
+                    android:layout_weight="1"
+                    app:civ_border_color="#ccbbbb" />
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1">
+                    <de.hdodenhof.circleimageview.CircleImageView
+                        android:layout_width="77dp"
+                        android:layout_height="77dp"
+                        android:id="@+id/adviser_image"
+                        android:layout_centerInParent="true"/>
+                    <de.hdodenhof.circleimageview.CircleImageView
+                        android:layout_width="89dp"
+                        android:layout_height="89dp"
+                        android:background="@drawable/border"
+                        android:layout_centerInParent="true"/>
+                </RelativeLayout>
+                <!--<de.hdodenhof.circleimageview.CircleImageView
+                    xmlns:app="http://schemas.android.com/apk/res-auto"
+                    android:layout_weight="1"
+                    android:background="@drawable/border"
+                    android:id="@+id/adviser_image"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    app:civ_border_width="2dp"
+                    app:civ_border_color="#ccbbbb" />-->
+                <de.hdodenhof.circleimageview.CircleImageView
+                    xmlns:app="http://schemas.android.com/apk/res-auto"
+                    android:id="@+id/adviser_reserve_img"
+                    android:layout_weight="1"
+                    android:layout_margin="30dp"
+                    android:src="@drawable/rezerx"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    app:civ_border_width="2dp"
+                    app:civ_border_color="#ccbbbb" />
+            </LinearLayout>
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="8"
+                android:layoutDirection="ltr"
+                android:orientation="horizontal">
+
+
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:padding="20dp"
+                    android:id="@+id/alagestarmoshaver"
+                    android:layout_weight="4"/>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical"
+                    android:layout_weight="2">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="#f3f3fa"
+                        android:layout_gravity="center"
+                        android:id="@+id/name_moshaver_textview"
+                        android:layout_centerHorizontal="true"
+                        android:gravity="center"
+                        android:textStyle="bold"/>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_centerHorizontal="true"
+                        android:layout_below="@+id/name_moshaver_textview"
+                        android:textColor="#f3f3fa"
+                        android:id="@+id/taxassose_moshaver_textview"
+                        android:gravity="center"/>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:textColor="#f3f3fa"
+                        android:layout_below="@+id/taxassose_moshaver_textview"
+                        android:layout_centerHorizontal="true"
+                        android:id="@+id/code_moshaver_textview"
+                        android:gravity="center"/>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="4"/>
+
+            </LinearLayout>
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="7">
-            <de.hdodenhof.circleimageview.CircleImageView
-                xmlns:app="http://schemas.android.com/apk/res-auto"
-                android:id="@+id/adviser_about_img"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                app:civ_border_width="2dp"
-                android:layout_margin="30dp"
-                android:src="@drawable/rezerv"
-                android:layout_weight="1"
-                app:civ_border_color="#ccbbbb" />
 
-            <RelativeLayout
+            <TabHost
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="1">
-                <de.hdodenhof.circleimageview.CircleImageView
-                    android:layout_width="77dp"
-                    android:layout_height="77dp"
-                    android:id="@+id/adviser_image"
-                    android:layout_centerInParent="true"/>
-                <de.hdodenhof.circleimageview.CircleImageView
-                    android:layout_width="89dp"
-                    android:layout_height="89dp"
-                    android:background="@drawable/border"
-                    android:layout_centerInParent="true"/>
-            </RelativeLayout>
-            <!--<de.hdodenhof.circleimageview.CircleImageView
-                xmlns:app="http://schemas.android.com/apk/res-auto"
-                android:layout_weight="1"
-                android:background="@drawable/border"
-                android:id="@+id/adviser_image"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                app:civ_border_width="2dp"
-                app:civ_border_color="#ccbbbb" />-->
-            <de.hdodenhof.circleimageview.CircleImageView
-                xmlns:app="http://schemas.android.com/apk/res-auto"
-                android:id="@+id/adviser_reserve_img"
-                android:layout_weight="1"
-                android:layout_margin="30dp"
-                android:src="@drawable/rezerx"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                app:civ_border_width="2dp"
-                app:civ_border_color="#ccbbbb" />
+                android:id="@android:id/tabhost">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+
+                    <TabWidget
+                        android:id="@android:id/tabs"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"/>
+
+                    <FrameLayout
+                        android:id="@android:id/tabcontent"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+
+                        <LinearLayout
+                            android:id="@+id/tabexplaimoshaver1"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:orientation="vertical">
+
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:id="@+id/tabexplaimoshaver2"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:orientation="vertical">
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:id="@+id/tabexplaimoshaver3"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:orientation="vertical">
+                        </LinearLayout>
+                    </FrameLayout>
+                </LinearLayout>
+            </TabHost>
+
         </LinearLayout>
 
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="260dp"
+        android:layout_height="200dp"
+        android:layoutDirection="ltr"
+        android:id="@+id/darbareyehuseyin"
+        android:visibility="gone"
+        android:orientation="vertical"
+        android:background="@drawable/likedisalage"
+        android:layout_centerInParent="true">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="8"
-            android:layoutDirection="ltr"
-            android:orientation="horizontal">
+            android:gravity="right"
+            android:layout_weight="2">
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="#fff"
+                android:gravity="center"
+                android:padding="10dp"
+                android:text="درباره ی مشاور"/>
 
             <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:padding="20dp"
-                android:id="@+id/alagestarmoshaver"
-                android:layout_weight="4"/>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:layout_weight="2">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="#f3f3fa"
-                    android:layout_gravity="center"
-                    android:id="@+id/name_moshaver_textview"
-                    android:layout_centerHorizontal="true"
-                    android:gravity="center"
-                    android:textStyle="bold"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_centerHorizontal="true"
-                    android:layout_below="@+id/name_moshaver_textview"
-                    android:textColor="#f3f3fa"
-                    android:id="@+id/taxassose_moshaver_textview"
-                    android:gravity="center"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:textColor="#f3f3fa"
-                    android:layout_below="@+id/taxassose_moshaver_textview"
-                    android:layout_centerHorizontal="true"
-                    android:id="@+id/code_moshaver_textview"
-                    android:gravity="center"/>
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="4"/>
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_margin="5dp"
+                android:id="@+id/closeinvisibleimag"
+                android:src="@drawable/ok"/>
 
         </LinearLayout>
-    </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="7">
-
-        <TabHost
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@android:id/tabhost">
+            android:layoutDirection="ltr"
+            android:layout_weight="1"
+            android:orientation="horizontal"
+            android:layout_height="match_parent">
 
-            <LinearLayout
+            <TextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical">
+                android:layout_margin="15dp"
+                android:id="@+id/textTagsHusseyin"
+                android:layout_marginBottom="20dp"/>
 
-                <TabWidget
-                    android:id="@android:id/tabs"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"/>
+        </RelativeLayout>
 
-                <FrameLayout
-                    android:id="@android:id/tabcontent"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-
-                    <LinearLayout
-                        android:id="@+id/tabexplaimoshaver1"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="vertical">
-
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:id="@+id/tabexplaimoshaver2"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="vertical">
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:id="@+id/tabexplaimoshaver3"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="vertical">
-                    </LinearLayout>
-                </FrameLayout>
-            </LinearLayout>
-        </TabHost>
 
     </LinearLayout>
 
-</LinearLayout>
+
+</RelativeLayout>
