--- a/app/src/main/res/layout/activity_page_login.xml
+++ b/app/src/main/res/layout/activity_page_login.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,6 +8,13 @@
     android:background="@drawable/loginlay"
     android:layout_height="match_parent"
     tools:context="azad.hallaji.farzad.com.masirezendegi.PageLogin">
+
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:orientation="vertical"
+        android:layout_height="match_parent">
 
     <android.support.v7.widget.Toolbar
         android:layout_width="match_parent"
@@ -114,4 +121,14 @@
         android:layout_height="match_parent"
         android:layout_weight="1.5"/>
 
-</LinearLayout>
+        <ProgressBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            android:layout_gravity="center"
+            android:layout_marginBottom="50dp"
+            android:id="@+id/progressbarsandaha"/>
+
+    </LinearLayout>
+
+</RelativeLayout>
