--- a/app/src/main/res/layout/activity_liste_moshaverin.xml
+++ b/app/src/main/res/layout/activity_liste_moshaverin.xml
@@ -8,6 +8,12 @@
     tools:context="azad.hallaji.farzad.com.masirezendegi.ListeMoshaverin">
 
 
+    <ProgressBar
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/progressbarsandaha"
+        android:layout_gravity="center"/>
+
     <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
