--- a/app/src/main/res/layout/activity_pasoxe_porsesh.xml
+++ b/app/src/main/res/layout/activity_pasoxe_porsesh.xml
@@ -1,14 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layoutDirection="ltr"
     android:orientation="vertical"
     android:background="@drawable/mohaverinpage"
     android:layout_height="match_parent"
     tools:context="azad.hallaji.farzad.com.masirezendegi.PasoxePorsesh">
 
+    <ProgressBar
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/progressbarsandaha"
+        android:visibility="gone"
+        android:layout_centerInParent="true"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:layoutDirection="ltr">
     <android.support.v7.widget.Toolbar
         android:layout_width="match_parent"
         android:padding="5dp"
@@ -420,5 +431,6 @@
 
     </RelativeLayout>
 
-
 </LinearLayout>
+
+</RelativeLayout>
