--- a/app/src/main/res/layout/activity_sich_olan_taxassus.xml
+++ b/app/src/main/res/layout/activity_sich_olan_taxassus.xml
@@ -1,13 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout android:layout_width="match_parent"
+<RelativeLayout android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layoutDirection="ltr"
     android:background="@drawable/mohaverinpage"
-    android:baselineAligned="false"
-    android:id="@+id/lay2"
-    android:orientation="vertical"
     xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <ProgressBar
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/progressbarsandaha"
+        android:layout_centerInParent="true"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layoutDirection="ltr"
+        android:orientation="vertical"
+        android:id="@+id/lay2"
+        android:layout_height="match_parent">
+
 
     <android.support.v7.widget.Toolbar
         android:layout_width="match_parent"
@@ -66,5 +76,6 @@
 
     </LinearLayout>
 
+    </LinearLayout>
 
-</LinearLayout>
+</RelativeLayout>
