--- a/app/src/main/res/layout/content_alagemandiha.xml
+++ b/app/src/main/res/layout/content_alagemandiha.xml
@@ -1,8 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layoutDirection="ltr"
-    android:layout_height="match_parent" android:background="@drawable/mohaverinpage">
+    android:layout_height="match_parent"
+    android:background="@drawable/mohaverinpage">
+
+    <ProgressBar
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/progressbarsandaha"
+        android:layout_centerInParent="true"/>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
     <LinearLayout
         android:orientation="vertical"
@@ -66,5 +80,5 @@
 
 
     </LinearLayout>
-
 </LinearLayout>
+</RelativeLayout>
