--- a/app/src/main/res/layout/content_explain_marakez.xml
+++ b/app/src/main/res/layout/content_explain_marakez.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout android:layout_width="match_parent"
+<RelativeLayout android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/explainpage"
@@ -9,6 +9,16 @@
     android:orientation="vertical"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <ProgressBar
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/progressbarsandaha"
+        android:layout_centerInParent="true"/>
+
+<LinearLayout
+    android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:layout_height="match_parent">
 
 
     <LinearLayout
@@ -173,5 +183,6 @@
         </TabHost>
 
     </LinearLayout>
-
 </LinearLayout>
+
+</RelativeLayout>
