--- a/app/src/main/res/layout/content_explain_marakez.xml
+++ b/app/src/main/res/layout/content_explain_marakez.xml
@@ -60,22 +60,55 @@
                 android:layout_gravity="right"
                 android:src="@drawable/ic_menu_white"/>
         </LinearLayout>
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_weight="7"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:layout_weight="7">
+            <de.hdodenhof.circleimageview.CircleImageView
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/adviser_about_img"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:civ_border_width="2dp"
+                android:layout_margin="30dp"
+                android:layout_weight="1"
+                app:civ_border_color="#ccbbbb" />
 
-            <de.hdodenhof.circleimageview.CircleImageView
-                android:layout_width="77dp"
-                android:layout_height="77dp"
-                android:id="@+id/markaz_image"
-                android:layout_centerInParent="true"/>
-            <de.hdodenhof.circleimageview.CircleImageView
-                android:layout_width="89dp"
-                android:layout_height="89dp"
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1">
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:layout_width="77dp"
+                    android:layout_height="77dp"
+                    android:id="@+id/markaz_image"
+                    android:layout_centerInParent="true"/>
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:layout_width="89dp"
+                    android:layout_height="89dp"
+                    android:background="@drawable/border"
+                    android:layout_centerInParent="true"/>
+            </RelativeLayout>
+            <!--<de.hdodenhof.circleimageview.CircleImageView
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:layout_weight="1"
                 android:background="@drawable/border"
-                android:layout_centerInParent="true"/>
-        </RelativeLayout>
+                android:id="@+id/adviser_image"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:civ_border_width="2dp"
+                app:civ_border_color="#ccbbbb" />-->
+            <de.hdodenhof.circleimageview.CircleImageView
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/adviser_reserve_img"
+                android:layout_weight="1"
+                android:layout_margin="30dp"
+                android:src="@drawable/rezerx"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:civ_border_width="2dp"
+                app:civ_border_color="#ccbbbb" />
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -184,5 +217,101 @@
 
     </LinearLayout>
 </LinearLayout>
+
+
+    <LinearLayout
+        android:layout_width="280dp"
+        android:layout_height="390dp"
+        android:layoutDirection="ltr"
+        android:id="@+id/darbareyehuseyin"
+        android:visibility="gone"
+        android:orientation="vertical"
+        android:background="@drawable/kkk"
+        android:layout_centerInParent="true">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="right"
+            android:orientation="horizontal"
+            android:layout_weight="5">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="#fff"
+                android:gravity="center"
+                android:padding="10dp"
+                android:text="درباره ی مرکز"/>
+
+            <ImageView
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_margin="5dp"
+                android:id="@+id/closeinvisibleimag"
+                android:src="@drawable/ok"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layoutDirection="ltr"
+            android:layout_weight="1"
+            android:orientation="vertical"
+            android:layout_height="match_parent">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:layout_weight="2">
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="3"
+                    android:layout_margin="2dp"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:textColor="#000"
+                    android:text="آدرس مرکز"/>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_margin="15dp"
+                    android:layout_weight="1"
+                    android:padding="5dp"
+                    android:background="#fff"
+                    android:id="@+id/textTagsHusseyin"
+                    android:layout_marginBottom="20dp"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:layout_weight="1">
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="5"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:textColor="#000"
+                    android:text="درباره ی مرکز"/>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_margin="15dp"
+                    android:layout_weight="1"
+                    android:padding="5dp"
+                    android:background="#fff"
+                    android:id="@+id/textdarvabasasHusseyin"
+                    android:layout_marginBottom="20dp"/>
+            </LinearLayout>
+
+        </LinearLayout>
+
+
+    </LinearLayout>
 
 </RelativeLayout>
