--- a/app/src/main/res/layout/content_explain_moshaver.xml
+++ b/app/src/main/res/layout/content_explain_moshaver.xml
@@ -142,15 +142,30 @@
                         android:layout_centerHorizontal="true"
                         android:gravity="center"
                         android:textStyle="bold"/>
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
+                    <LinearLayout
+                        android:layout_width="match_parent"
                         android:layout_centerHorizontal="true"
                         android:layout_below="@+id/name_moshaver_textview"
-                        android:textColor="#f3f3fa"
-                        android:id="@+id/taxassose_moshaver_textview"
-                        android:gravity="center"/>
+                        android:orientation="horizontal"
+                        android:layout_height="wrap_content">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:layout_weight="1"
+                            android:textColor="#f3f3fa"
+                            android:id="@+id/code_moshaver_textview"
+                            android:gravity="right"/>
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text=" کد مشاور : "
+                            android:layout_weight="1"
+                            android:layout_gravity="center"
+                            android:gravity="left"
+                            android:textColor="#Fff"/>
+                    </LinearLayout>
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -158,7 +173,7 @@
                         android:textColor="#f3f3fa"
                         android:layout_below="@+id/taxassose_moshaver_textview"
                         android:layout_centerHorizontal="true"
-                        android:id="@+id/code_moshaver_textview"
+                        android:id="@+id/taxassose_moshaver_textview"
                         android:gravity="center"/>
                 </LinearLayout>
 
