--- a/app/src/main/res/layout/content_porseshejadid.xml
+++ b/app/src/main/res/layout/content_porseshejadid.xml
@@ -55,7 +55,6 @@
                     android:layout_margin="10dp"
                     android:id="@+id/menuButton"
                     android:layout_gravity="right"
-
                     android:src="@drawable/ic_menu_white"/>
             </LinearLayout>
 
@@ -106,7 +105,7 @@
 
             <EditText
                 android:layout_width="250dp"
-                android:layout_height="300dp"
+                android:layout_height="250dp"
                 android:padding="20dp"
                 android:textSize="14dp"
                 android:id="@+id/edittextsoal"
@@ -130,6 +129,7 @@
                 android:layout_height="20dp"
                 android:layout_marginBottom="10dp"
                 android:layout_gravity="center"
+                android:visibility="gone"
                 android:id="@+id/progressbarsandaha"/>
 
 
