--- a/app/src/main/res/layout/itemelisense.xml
+++ b/app/src/main/res/layout/itemelisense.xml
@@ -3,11 +3,21 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/asdfghjkidghjm"
-        android:layout_margin="2dp"/>
+    <LinearLayout
+        android:layout_width="314dp"
+        android:layout_gravity="center"
+        android:layout_height="206dp">
+
+        <ImageView
+            android:layout_width="fill_parent"
+            android:layout_gravity="center"
+            android:layout_height="wrap_content"
+            android:adjustViewBounds="true"
+            android:scaleType="fitXY"
+            android:id="@+id/asdfghjkidghjm"
+            android:layout_margin="5dp"/>
+
+    </LinearLayout>
 
 
 </LinearLayout>
