--- a/app/src/main/res/layout/content_explain_marakez.xml
+++ b/app/src/main/res/layout/content_explain_marakez.xml
@@ -220,8 +220,8 @@
 
 
     <LinearLayout
-        android:layout_width="280dp"
-        android:layout_height="390dp"
+        android:layout_width="260dp"
+        android:layout_height="370dp"
         android:layoutDirection="ltr"
         android:id="@+id/darbareyehuseyin"
         android:visibility="gone"
@@ -280,6 +280,7 @@
                     android:layout_margin="15dp"
                     android:layout_weight="1"
                     android:padding="5dp"
+                    android:scrollbars = "vertical"
                     android:background="#fff"
                     android:id="@+id/textTagsHusseyin"
                     android:layout_marginBottom="20dp"/>
@@ -304,6 +305,7 @@
                     android:layout_margin="15dp"
                     android:layout_weight="1"
                     android:padding="5dp"
+                    android:scrollbars = "vertical"
                     android:background="#fff"
                     android:id="@+id/textdarvabasasHusseyin"
                     android:layout_marginBottom="20dp"/>
